[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.98"                                          # error handling
bytes = "1.10.1"                                           # helps manage buffers
env_logger = "0.11.8"
log = "0.4.27"
mio = { version = "1.0.4", features = ["os-poll", "net"] }
thiserror = "2.0.12"                                       # error handling
tokio = { version = "1.47.1", features = ["full"] }        # async networking
